--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# DataSource Configuration
+#########################################################
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:9912/mediscreen?createIfNotExists=true
+spring.datasource.username=root
+spring.datasource.password=eYv8acxbemJ4Q!PPpLgsKNnC
