--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-# DataSource Configuration
+# General
+################
+server.port=7900
+
+# DataSource
 #########################################################
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:9912/mediscreen?createIfNotExists=true
