--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 server.port=7900
 
 # DataSource
-#########################################################
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+############################################################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:9912/mediscreen?createIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=eYv8acxbemJ4Q!PPpLgsKNnC
