--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ jacocoTestCoverageVerification {
     violationRules {
         rule {
             limit {
-                counter = 'LINE'
+                counter = 'INSTRUCTION'
                 value = 'COVEREDRATIO'
                 minimum = 0.8
             }
